# Web-scraping-python

./: README.md
footbal_scrapy/: fifa_world_cup_matchs.csv  pyproject.toml
footbal_scrapy/footbal_scrapy/: fifa_word_cup.ipynb  main.py
myscraping/: pyproject.toml
scrapyTutorial/mangascrapy/: manga.json  scrapy.cfg
scrapyTutorial/mangascrapy/mangascrapy/: items.py  middlewares.py  pipelines.py  settings.py
scrapyTutorial/mangascrapy/mangascrapy/spiders/: manga_spider.py
scrapyTutorial/mscraping/: scrapy.cfg
scrapyTutorial/mscraping/mscraping/: items.py  middlewares.py  pipelines.py  settings.py
scrapyTutorial/mscraping/mscraping/spiders/: anime_list.py  manga.py
scrapyTutorial/quotestutorial/: scrapy.cfg
scrapyTutorial/quotestutorial/quotestutorial/: items.py  middlewares.py  pipelines.py  quotescrapy.json  settings.py
scrapyTutorial/quotestutorial/quotestutorial/spiders/: backup.py  quotes_spider.py
twitterScrape/: helper-mysql-docker-image.txt  pyproject.toml
twitterScrape/twitter_scrape/: gaules_twitters.py  ingest_twitter.py
