[tool.poetry]
name = "footbal-scrapy"
version = "0.1.0"
description = ""
authors = ["Amospk2 <googletraduzpramin@hotmail.com>"]
readme = "README.md"
packages = [{include = "footbal_scrapy"}]

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
lxml = "^4.9.1"
requests = "^2.28.1"
pandas = "^1.5.2"
ipykernel = "^6.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
